--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@tanstack/router-devtools": "^1.128.8",
+    "@tanstack/router-plugin": "^1.128.8",
     "@vitejs/plugin-react": "^4.6.0",
     "eslint": "^9.31.0",
     "eslint-config-prettier": "^10.1.5",
@@ -25,6 +27,7 @@
     "vite": "^7.0.4"
   },
   "dependencies": {
+    "@tanstack/react-router": "^1.128.8",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   }
